fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     background-color: var(--bg-main);
     color: var(--text);
     font-size: 16px;
+     overflow-x: hidden;
 }
 
 .container {
